# apipe

./: Cargo.toml  LICENSE.md  README.md
doc/: README.html
src/: cmd.rs  error.rs  lib.rs  output.rs  pipe.rs
