[package]
name = "apipe"
authors = ["A.Hoffmann <FinalSh4re>"]
description = "An anonymous UNIX pipe type."
keywords = ["pipe", "anonymous pipe", "process", "cli", "redirection", "stdin", "stdout"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/FinalSh4re/apipe-rs"

[dependencies]
anyhow = { version = "1.0.62", features = ["backtrace"] }
