[package]
name = "apipe"
authors = ["A.Hoffmann <FinalSh4re>"]
description = "An anonymous UNIX pipe type."
keywords = ["pipe", "anonymous", "process", "stdin", "stdout"]
version = "0.2.0"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/FinalSh4re/apipe-rs"

[dependencies]
lazy_static = "1.4.0"
regex = "1.6.0"
thiserror = "1.0.32"
