[package]
name = "apipe"
authors = ["A.Hoffmann <FinalSh4re>"]
description = "An anonymous UNIX pipe type."
keywords = ["pipe", "anonymous", "process", "stdin", "stdout"]
version = "0.2.0"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/FinalSh4re/apipe-rs"

[dependencies]
lazy_static = { version = "1.4.0", optional = true}
regex = { version = "1.6.0", optional = true}

[features]
default = ["parser"]
parser = ["dep:lazy_static", "dep:regex"]
nodeps = []

